creacion formulario nuevo producto

--- a/front/src/pages/productsByCategory.module.css
+++ b/front/src/pages/productsByCategory.module.css
@@ -1,3 +1,20 @@
 .navLink:hover {
     color: blue
 }
+
+@media screen and (min-width: 1400px) {
+    .cardModule {
+        width: 20%;
+    }  
+}
+
+@media screen and (min-width: 900px) {
+    .cardModule {
+        width: 30%;
+    }  
+}
+@media screen and (max-width: 899px) {
+    .cardModule {
+        width: 40%;
+    }  
+}
