--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -24,3 +24,37 @@ nav .item:hover {
 nav svg:hover {
     transform: scale(1.20);
 }
+
+/* Formulario Nuevo Producto */
+
+
+label {
+    color:white
+}
+
+.formularioEvent {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+    transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+}
+
+.formularioEvent form {
+    width: 100%;
+    padding: 40px;
+    background: rgb(90, 84, 84);
+    border-radius: 20px;
+}
+
+.formularioEvent form h2 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #EB6E80;
+}
+
+
+.formularioEvent form button {    
+    margin-top: 40px; 
+}
+
