--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,3 +1,9 @@
+body {
+    position: relative;
+    padding-bottom: 6em;
+    min-height: 100vh; 
+}
+
 /* Navbar */
 
 nav .nav-link{
@@ -28,33 +34,31 @@ nav svg:hover {
 /* Formulario Nuevo Producto */
 
 
-label {
-    color:white
-}
 
-.formularioEvent {
-    display: flex;
-    align-items: center;
-    margin-bottom: 50px;
-    transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+.formEvent {
+    min-height: 70vh;
 }
-
-.formularioEvent form {
+.formEvent form {
     width: 100%;
     padding: 40px;
-    background: rgb(90, 84, 84);
+    background: rgb(138, 133, 133);
     border-radius: 20px;
 }
 
-.formularioEvent form h2 {
+.formEvent form h2 {
     font-size: 30px;
     text-align: center;
     margin-bottom: 20px;
-    color: #EB6E80;
 }
 
+/* Formulario Login/Register */
 
-.formularioEvent form button {    
-    margin-top: 40px; 
+.formLogin {
+    min-height: 70vh;
+}
+.formLogin form {
+    padding: 40px;
+    background: rgb(138, 133, 133);
+    border-radius: 20px;
 }
 
