--- a/front/src/pages/productDetails.module.css
+++ b/front/src/pages/productDetails.module.css
@@ -2,6 +2,15 @@
     color: blue
 }
 
+.buttonsEdition {
+    cursor: pointer;
+}
+.buttonsEdition:hover {
+    filter: drop-shadow(0px 0px 5px rgb(172, 148, 148));
+    transform: scale(1.10);
+
+}
+
 .separator {
     width: 100%;
     height: 2px;
