--- a/front/src/styles/Cart.module.css
+++ b/front/src/styles/Cart.module.css
@@ -29,9 +29,9 @@
     }
     .containerTotal {
         border-left: none !important;
-        border-bottom: solid 2px gray;
-        margin-bottom: 10px;
-        padding: 20px 0;
+        border-top: solid 2px gray;
+        margin-top: 20px;
+        padding: 15px 0 0 0;
     }
     .subContainerTotal {
         display: block;        
