--- a/front/src/styles/styles.css
+++ b/front/src/styles/styles.css
@@ -44,6 +44,28 @@ nav .item:hover {
 nav svg:hover {
     transform: scale(1.20);
 }
+nav #counterItemsCart {
+    position: absolute;
+    top:10%;
+    right: 5%;
+    width: 17px;
+    border-radius: 100%;
+    height: 17px;  
+    background-color: rgb(147, 146, 212);
+}
+nav #counterItemsCart span {
+    margin-left: 4px;
+    top: -7%;
+    font-size: 13px;
+    position: absolute;
+    
+}
+
+nav #cart {
+    position: relative;
+    width: 51px;
+    height: 51px;
+}
 
 /* Formulario Crear Producto */
 
